test_fixtures/while/var_in_body.lox
// ParserError: UnexpectedExpressionToken found Var from l2c14 to l2c17
while (true) var foo;
